# KtAvPlayer

./: build_android_arm64-v8a_clang.sh  build_android_armeabi_clang.sh  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/ktavplayer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  DNFFmpeg.cpp  DNFFmpeg.h  JavaCallHelper.cpp  JavaCallHelper.h  KTFFmpeg.cpp  KTFFmpeg.h  VideoChannel.cpp  VideoChannel.h  macro.h  player_jni.cpp  safe_queue.h
app/src/main/cpp/include/libavutil/: common.h
app/src/main/java/com/example/ktavplayer/: MainActivity.java  PlayActivity.java
app/src/main/java/com/example/ktavplayer/player/: DNPlayer.java  KTPlayer.java
app/src/main/java/com/example/ktavplayer/util/: AssetHelper.kt  CommonUtils.java
app/src/main/res/layout/: activity_main.xml  activity_main2.xml  activity_play.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/ktavplayer/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
